@@ -6,12 +6,24 @@ import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 
 import java.net.IDN;
+//? if >=1.19.4 {
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+//?} else {
+/*import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.concurrent.CompletableFuture;
+*///?}
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
@@ -25,11 +37,10 @@ public final class Domains {
     private static final int MAX_RESPONSE_LENGTH = 1_048_576;
     private static final int MAX_REMOTE_DOMAINS = 4_096;
 
-    private static final Set<String> DEFAULT = Set.of(
-        "*.6b6t.org", "*.10b10t.org", "*.6b6t.cc", "*.6b6t.me",
-        "*.7b7t.me", "*.8b8t.org", "*.8b8t.xyz", "*.alacity.net",
-        "*.anarchypvp.pw", "*.l2x9.org", "*.simpleanarchy.org"
-    );
+    private static final Set<String> DEFAULT = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+            "*.6b6t.org", "*.10b10t.org", "*.6b6t.cc", "*.6b6t.me",
+            "*.7b7t.me", "*.8b8t.org", "*.8b8t.xyz", "*.alacity.net",
+            "*.anarchypvp.pw", "*.l2x9.org", "*.simpleanarchy.org")));
 
     private static final Gson GSON = new Gson();
     private static final AtomicBoolean REMOTE_LOAD_STARTED = new AtomicBoolean();
@@ -44,38 +55,86 @@ public final class Domains {
         }
     }
 
+    // ? if >=1.19.4 {
     private static void loadRemoteAsync() {
         try {
             HttpClient client = HttpClient.newBuilder()
-                .connectTimeout(Duration.ofSeconds(5))
-                .build();
+                    .connectTimeout(Duration.ofSeconds(5))
+                    .build();
             HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(DOMAINS_URL))
-                .timeout(Duration.ofSeconds(10))
-                .header("Accept", "application/json")
-                .GET()
-                .build();
+                    .uri(URI.create(DOMAINS_URL))
+                    .timeout(Duration.ofSeconds(10))
+                    .header("Accept", "application/json")
+                    .GET()
+                    .build();
 
             client.sendAsync(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8))
-                .thenAccept(Domains::applyRemoteResponse)
-                .exceptionally(error -> {
-                    LOGGER.warning("Failed to load domains from remote, using defaults: " + error.getMessage());
-                    return null;
-                });
+                    .thenAccept(response -> applyRemoteResponse(response.statusCode(), response.body()))
+                    .exceptionally(error -> {
+                        LOGGER.warning("Failed to load domains from remote, using defaults: " + error.getMessage());
+                        return null;
+                    });
         } catch (RuntimeException error) {
-            // Domain checks must remain available even if the HTTP client cannot be initialized.
+            // Domain checks must remain available even if the HTTP client cannot be
+            // initialized.
             LOGGER.warning("Failed to load domains from remote, using defaults: " + error.getMessage());
         }
     }
+    // ?} else {
+    /*
+     * private static void loadRemoteAsync() {
+     * CompletableFuture.runAsync(() -> {
+     * HttpURLConnection connection = null;
+     * try {
+     * connection = (HttpURLConnection) new URL(DOMAINS_URL).openConnection();
+     * connection.setRequestMethod("GET");
+     * connection.setRequestProperty("Accept", "application/json");
+     * connection.setConnectTimeout(5_000);
+     * connection.setReadTimeout(10_000);
+     *
+     * int statusCode = connection.getResponseCode();
+     * InputStream stream = statusCode == 200 ? connection.getInputStream() :
+     * connection.getErrorStream();
+     * applyRemoteResponse(statusCode, readBody(stream));
+     * } catch (IOException | RuntimeException error) {
+     * // Domain checks must remain available even if the HTTP client cannot be
+     * initialized.
+     * LOGGER.warning("Failed to load domains from remote, using defaults: " +
+     * error.getMessage());
+     * } finally {
+     * if (connection != null) {
+     * connection.disconnect();
+     * }
+     * }
+     * });
+     * }
+     *
+     * private static String readBody(InputStream stream) throws IOException {
+     * if (stream == null) {
+     * return "";
+     * }
+     *
+     * StringBuilder builder = new StringBuilder();
+     * try (BufferedReader reader = new BufferedReader(new InputStreamReader(stream,
+     * StandardCharsets.UTF_8))) {
+     * char[] buffer = new char[8_192];
+     * int read;
+     * while (builder.length() <= MAX_RESPONSE_LENGTH && (read =
+     * reader.read(buffer)) != -1) {
+     * builder.append(buffer, 0, read);
+     * }
+     * }
+     * return builder.toString();
+     * }
+     */// ?}
 
-    private static void applyRemoteResponse(HttpResponse<String> response) {
-        if (response.statusCode() != 200) {
-            LOGGER.warning("Failed to load domains from remote, using defaults: HTTP " + response.statusCode());
+    private static void applyRemoteResponse(int statusCode, String body) {
+        if (statusCode != 200) {
+            LOGGER.warning("Failed to load domains from remote, using defaults: HTTP " + statusCode);
             return;
         }
 
-        String body = response.body();
-        if (body == null || body.isBlank() || body.length() > MAX_RESPONSE_LENGTH) {
+        if (body == null || body.trim().isEmpty() || body.length() > MAX_RESPONSE_LENGTH) {
             LOGGER.warning("Failed to load domains from remote, using defaults: response is empty or too large");
             return;
         }
@@ -105,7 +164,7 @@ public final class Domains {
         }
 
         // Readers always see either the old or the complete new immutable snapshot.
-        domains = Set.copyOf(updated);
+        domains = Collections.unmodifiableSet(updated);
     }
 
     public static boolean contains(String input) {
@@ -187,7 +246,8 @@ public final class Domains {
         }
 
         try {
-            // IPv6 literals contain colons and are not valid IDNs, but preserving them is safe.
+            // IPv6 literals contain colons and are not valid IDNs, but preserving them is
+            // safe.
             if (host.indexOf(':') >= 0) {
                 return host.toLowerCase(Locale.ROOT);
             }
